[package]
name = "minus2c-rust"
version = "0.1.0"
authors = ["Fola <30976147+fl-w@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.28"
bindgen = "0.55.1"

[dependencies]
parser = { path = "parser" }
rustyline = "6.3.0"
structopt = { version = "0.3", default-features = false }
tuple-map = "0.4.0"
log = "0.4.11"
slog-term = "2.6"
colog = "1.0"
pretty_env_logger = "0.3"
itertools = "0.9"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
