[package]
name = "mmcrust"
version = "0.1.0"
authors = ["fola <30976147+fl-w@users.noreply.github.com>"]
edition = "2018"

# [build-dependencies]
# cc = "1.0.28"
# bindgen = "0.55.1"

[dependencies]
parser = { path = "parser" }

argh = "0.1.4"
rustyline = "6.3.0"
log = "0.4.11"
colog = "1.0"
itertools = "0.9"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
