[package]
name = "parser"
version = "0.1.0"
authors = ["Fola <30976147+fl-w@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
unescape = "0.1.0"

[build-dependencies]
cc = "1.0.28"
bindgen = "0.55.1"
